todo-app-backend-delete-task/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deletetask-ingress
  namespace: gagan
  annotations:
    # kubernetes.io/ingress.class: addon-http-application-routing
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: deletetaskservice.gaggidevops.online
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: deletetaskservice
            port: 
              number: 80
